#30: adds necessary files to switch pkg creation on mac to deploy to app store by default