@@ -12,11 +12,7 @@
 
     <artifactId>installer-osx</artifactId>
     <name>app.logorrr.dist.osx.installer</name>
-    <properties>
-        <!-- set this property in your settings.xml
-        <app.logorrr.dist.osx.developerid/>
-        -->
-    </properties>
+
     <dependencies>
         <dependency>
             <groupId>app.logorrr</groupId>
@@ -35,15 +31,22 @@
     <build>
         <resources>
             <resource>
-                <directory>src/main/resources</directory>
+                <directory>src/main/installer</directory>
                 <includes>
-                    <include>icon/**</include>
                     <include>res/**</include>
+                    <include>icon/**</include>
+                    <include>LogoRRR.entitlements.xml</include>
                 </includes>
-                <excludes>
-                    <exclude>res/Info.plist</exclude>
-                </excludes>
                 <filtering>false</filtering>
+                <targetPath>${build.directory}</targetPath>
+            </resource>
+            <resource>
+                <directory>src/main/installer</directory>
+                <includes>
+                    <include>jpackage-commandline.options</include>
+                </includes>
+                <filtering>true</filtering>
+                <targetPath>${build.directory}</targetPath>
             </resource>
             <resource>
                 <directory>src/main/resources</directory>
@@ -52,6 +55,14 @@
                     <include>res/Info.plist</include>
                 </includes>
                 <filtering>true</filtering>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>jpackage-commandline.options</include>
+                </includes>
+                <filtering>true</filtering>
+                <targetPath>${build.directory}</targetPath>
             </resource>
         </resources>
         <plugins>
@@ -78,67 +89,12 @@
                 </executions>
             </plugin>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-antrun-plugin</artifactId>
-                <executions>
-                    <!-- delete java rt in any case (otherwise build exits with error later) -->
-                    <execution>
-                        <id>delete-javart</id>
-                        <phase>generate-resources</phase>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
-                        <configuration>
-                            <target>
-                                <delete dir="${project.build.directory}/java-rt"/>
-                                <delete dir="${project.build.directory}/app-tmp-image"/>
-                            </target>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <!-- Invoke exec maven plugin multiple times in order to create a valid dmg. -->
-            <!-- 1.) create a customized jre -->
-            <!-- 2.) on basis of this jre create an app image -->
-            <!-- 3.) sign all artefacts in this app image -->
-            <!-- 4.) create a dmg of those signed artefacts-->
-            <!-- 5.) sign dmg -->
-            <!-- 6.) notarize dmg -->
-            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
                 <executions>
-                    <!-- we don't need all features from our jre, strip down the most basic jre which can execute our app -->
-                    <execution>
-                        <id>step-1-create-custom-jre</id>
-                        <phase>generate-resources</phase>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                        <configuration>
-                            <executable>${jdk.jlink.binary}</executable>
-                            <workingDirectory>${project.build.directory}</workingDirectory>
-                            <environmentVariables>
-                                <JAVA_HOME>${jdk.home}</JAVA_HOME>
-                            </environmentVariables>
-                            <arguments>
-                                <argument>--strip-native-commands</argument>
-                                <argument>--no-header-files</argument>
-                                <argument>--no-man-pages</argument>
-                                <argument>--compress=2</argument>
-                                <argument>--strip-debug</argument>
-                                <argument>--add-modules</argument>
-                                <argument>jdk.crypto.ec,jdk.localedata,java.base,java.desktop,jdk.jfr,java.logging,jdk.unsupported
-                                </argument>
-                                <argument>--include-locales=en</argument>
-                                <argument>--output</argument>
-                                <argument>java-rt</argument>
-                            </arguments>
-                        </configuration>
-                    </execution>
                     <!-- create application image -->
                     <execution>
-                        <id>step-2-create-unsigned-app</id>
+                        <id>create-app-store-pkg</id>
                         <phase>compile</phase>
                         <goals>
                             <goal>exec</goal>
@@ -150,171 +106,11 @@
                                 <JAVA_HOME>${jdk.home}</JAVA_HOME>
                             </environmentVariables>
                             <arguments>
-                                <argument>--verbose</argument>
-                                <argument>--name</argument>
-                                <argument>LogoRRR</argument>
-                                <argument>--mac-package-name</argument>
-                                <argument>LogoRRR</argument>
-                                <argument>--mac-package-identifier</argument>
-                                <argument>app.logorrr</argument>
-                                <argument>--app-version</argument>
-                                <argument>${revision}</argument>
-                                <argument>--icon</argument>
-                                <!-- see https://stackoverflow.com/questions/12306223/how-to-manually-create-icns-files-using-iconutil on how to generate icns files -->
-                                <argument>classes/icon/logorrr-iconset.icns</argument>
-                                <argument>--resource-dir</argument>
-                                <argument>classes/res/</argument>
-                                <argument>--vendor</argument>
-                                <argument>logorrr.app</argument>
-                                <argument>--description</argument>
-                                <argument>LogoRRR is a log file visualisation app, see https://www.logorrr.app/
-                                </argument>
-                                <argument>--copyright</argument>
-                                <argument>Copyright 2021-2022 www.logorrr.app</argument>
-
-                                <argument>--type</argument>
-                                <argument>app-image</argument>
-                                <argument>--runtime-image</argument>
-                                <argument>java-rt</argument>
-                                <argument>--input</argument>
-                                <argument>libs</argument>
-                                <argument>--main-class</argument>
-                                <argument>${main.launcher.class}</argument>
-                                <argument>--main-jar</argument>
-                                <argument>app-${project.version}.jar</argument>
-                                <argument>--java-options</argument>
-                                <argument>-Xmx4096m</argument>
-                                <argument>--dest</argument>
-                                <argument>app-tmp-image</argument>
-                                <argument>--verbose</argument>
-                            </arguments>
-                        </configuration>
-                    </execution>
-
-                    <!-- sign dylibs and jars inside our app - not sure if we need this -->
-                    <execution>
-                        <id>step-3-sign-app</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>java</goal>
-                        </goals>
-                        <configuration>
-                            <mainClass>app.logorrr.build.CodeSigner</mainClass>
-                            <arguments>
-                                <argument>Developer ID Application: ${app.logorrr.dist.osx.developerid}</argument>
-                                <argument>/usr/bin/codesign</argument>
-                                <argument>${project.basedir}/LogoRRR.entitlements</argument>
-                                <argument>${project.build.directory}/classes/sign-list.txt</argument>
-                            </arguments>
-                            <includePluginDependencies>true</includePluginDependencies>
-                        </configuration>
-                    </execution>
-
-                    <execution>
-                        <id>step-4-create-pkg</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                        <configuration>
-                            <executable>${jdk.jpackage.binary}</executable>
-                            <workingDirectory>${project.build.directory}</workingDirectory>
-                            <environmentVariables>
-                                <JAVA_HOME>${jdk.home}</JAVA_HOME>
-                            </environmentVariables>
-                            <arguments>
-                                <argument>--verbose</argument>
-                                <argument>--name</argument>
-                                <argument>LogoRRR</argument>
-                                <argument>--app-image</argument>
-                                <argument>app-tmp-image/LogoRRR.app</argument>
-                                <argument>--mac-package-name</argument>
-                                <argument>LogoRRR</argument>
-                                <argument>--app-version</argument>
-                                <argument>${revision}</argument>
-                                <argument>--icon</argument>
-                                <!-- see https://stackoverflow.com/questions/12306223/how-to-manually-create-icns-files-using-iconutil on how to generate icns files -->
-                                <argument>classes/icon/logorrr-iconset.icns</argument>
-                                <argument>--resource-dir</argument>
-                                <argument>classes/res/</argument>
-                                <argument>--vendor</argument>
-                                <argument>logorrr.app</argument>
-                                <argument>--description</argument>
-                                <argument>LogoRRR is a log file visualisation app, see https://www.logorrr.app/
-                                </argument>
-                                <argument>--copyright</argument>
-                                <argument>Copyright 2021-2022 www.logorrr.app</argument>
-                                <argument>--license-file</argument>
-                                <argument>${basedir}/../../../LICENSE</argument>
-
-                                <!-- mac relevant options start -->
-                                <!--
-                                <argument>-x-mac-app-store</argument>
-                                -->
-                                <argument>--type</argument>
-                                <argument>pkg</argument>
-                                <argument>--mac-package-identifier</argument>
-                                <argument>app.logorrr</argument>
-                                <argument>--mac-sign</argument>
-                                <argument>--mac-signing-key-user-name</argument>
-                                <argument>${app.logorrr.dist.osx.developerid}</argument>
-                                <!-- mac relevant options end -->
-                                <argument>--dest</argument>
-                                <argument>installer</argument>
-                            </arguments>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>step-5-sign-pkg</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                        <configuration>
-                            <executable>${mac.productsign.binary}</executable>
-                            <workingDirectory>${project.basedir}</workingDirectory>
-                            <arguments>
-                                <argument>--sign</argument>
-                                <argument>Developer ID Installer: ${app.logorrr.dist.osx.developerid}</argument>
-                                <argument>${project.build.directory}/installer/LogoRRR-${revision}.pkg</argument>
-                                <argument>${project.build.directory}/installer/LogoRRR-${revision}-${os.arch}.pkg</argument>
+                                <argument>@jpackage-commandline.options</argument>
                             </arguments>
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>
-            <plugin>
-                <groupId>com.soebes.maven.plugins</groupId>
-                <artifactId>maven-echo-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>echo</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <echos>
-                        <echo>Running on architecture ${os.arch}</echo>
-                        <echo>JAVA_HOME for build     ${java.home}</echo>
-                        <echo>JDK used for jpackage   ${jdk.home}</echo>
-                        <echo></echo>
-                        <echo>Make sure you set PATH and JAVA_HOME to your desired values (x64 / aarch64) prior of executing this build.</echo>
-                        <echo></echo>
-                        <echo>For x64, intel based Macs:</echo>
-                        <echo></echo>
-                        <echo>export JAVA_HOME=${osx.jdk.home.x64};export PATH=${osx.jdk.home.x64}:$PATH</echo>
-                        <echo></echo>
-                        <echo></echo>
-                        <echo>For aarch64, Mac M1 chips:</echo>
-                        <echo></echo>
-                        <echo>export JAVA_HOME=${osx.jdk.home.aarch64};export PATH=${osx.jdk.home.aarch64}:$PATH</echo>
-                        <echo></echo>
-                        <echo></echo>
-                        <echo></echo>
-                    </echos>
-                </configuration>
             </plugin>
         </plugins>
     </build>
